--- a/src/app/pages/patient/bills/bills.page.html
+++ b/src/app/pages/patient/bills/bills.page.html
@@ -11,5 +11,39 @@
 </ion-header>
 
 <ion-content>
+  <ion-card *ngFor="let archive of archives">
+    <ion-card-header>
+      <ion-card-title> Bills for archive {{archive.archiveID}} </ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-label> Bills Paid </ion-label>
+        <ion-item *ngFor="let app of archive.appointments | billStatus: 'paid'">
+          <ion-icon
+            name="checkmark-done"
+            color="success"
+            slot="start"
+          ></ion-icon>
+          <ion-label color="success">{{app.name}}</ion-label>
+          <ion-label slot="end" color="success">{{100 | currency}}</ion-label>
+        </ion-item>
+      </ion-list>
+      <ion-list>
+        <ion-label> Bills Pending </ion-label>
+        <ion-item-sliding
+          *ngFor="let app of archive.appointments | billStatus: 'pending'"
+        >
+          <ion-item>
+            <ion-icon slot="start" name="card" color="danger"></ion-icon>
+            <ion-label color="danger">{{app.name}}</ion-label>
+            <ion-label slot="end" color="danger">{{100 | currency}}</ion-label>
+          </ion-item>
 
+          <ion-item-options>
+            <ion-item-option color="primary">Pay</ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
