--- a/src/app/pages/admin/manage-appointments/manage-appointments.page.html
+++ b/src/app/pages/admin/manage-appointments/manage-appointments.page.html
@@ -1,9 +1,69 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>manage-appointments</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Manage Appointments</ion-title>
+    <ion-buttons slot="end">
+      <ion-button [routerLink]="['']" routerLinkActive="router-link-active">
+        Logout
+      </ion-button>
+      <ion-icon name="log-out"></ion-icon>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button (click)="createApp()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-card style="min-width: 425px; display: inline-block" *ngFor="let app of appointments">
+    <ion-card-header>
+      <ion-card-title>
+        <ion-item lines="none">
+          <ion-label slot="start"> {{app.name}} </ion-label>
+          <ion-label slot="end">
+            <ion-chip color="danger" >
+              <ion-icon name="bandage"></ion-icon>
+              <ion-label>{{app.status}}</ion-label>
+            </ion-chip>
+          </ion-label>
+        </ion-item>
+      </ion-card-title>
+    </ion-card-header>
+    <ion-item-divider style="min-height: 0px;"></ion-item-divider>
+    <div style="position: relative">
+      <ion-fab vertical="bottom" horizontal="end" edge slot="fixed">
+        <ion-fab-button>
+          <ion-icon
+            md="caret-back"
+            ios="chevron-back-circle-outline"
+          ></ion-icon>
+        </ion-fab-button>
+        <ion-fab-list side="start">
+          <ion-fab-button color="danger" (click)="deleteApp(app)">
+            <ion-icon name="trash"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button color="light" (click)="editApp(app)">
+            <ion-icon name="create"></ion-icon>
+          </ion-fab-button>
+        </ion-fab-list>
+      </ion-fab>
+    </div>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-icon name="person" slot="start"></ion-icon>
+          <ion-label>Name: {{app.patient.name}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="calendar" slot="start"></ion-icon>
+          <ion-label>Date: {{app.date}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="git-network" slot="start"></ion-icon>
+          <ion-label>Doctor: {{app.doctor.name}}</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
