--- a/src/app/pages/clerk/bills/bills.page.html
+++ b/src/app/pages/clerk/bills/bills.page.html
@@ -1,9 +1,53 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>bills</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Bills</ion-title>
+    <ion-buttons slot="end">
+      <ion-button [routerLink]="['']" routerLinkActive="router-link-active">
+        Logout
+      </ion-button>
+      <ion-icon name="log-out"></ion-icon>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-card *ngFor="let app of appointments" style="min-width: 400px;display: inline-block;">
+    <ion-card-header>
+      <ion-card-title>
+        {{app.name}}
+      </ion-card-title>
+      <ion-card-subtitle>
+        Dr. {{app.doctor.name}}
+      </ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-icon name="person" slot="start"></ion-icon>
+          <ion-label>
+            {{app.patient.name}}
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="calendar" slot="start"></ion-icon>
+          <ion-label>
+            {{app.date}}
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="card" slot="start"></ion-icon>
+          <ion-label>
+            ${{app.bill}}
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="checkmark-done" slot="start"></ion-icon>
+          <ion-label>
+            {{app.status}}
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+    <ion-button fill="clear" (click)="createBill(app)">Edit</ion-button>
+  </ion-card>
 </ion-content>
