--- a/src/app/pages/reception/manage-patients/manage-patients.page.html
+++ b/src/app/pages/reception/manage-patients/manage-patients.page.html
@@ -1,9 +1,49 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>manage-patients</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Manage Patients</ion-title>
+    <ion-buttons slot="end">
+      <ion-button [routerLink]="['']" routerLinkActive="router-link-active">
+        Logout
+      </ion-button>
+      <ion-icon name="log-out"></ion-icon>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button (click)="createUser()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-card style="min-width: 400px; display: inline-block" *ngFor="let user of users">
+    <ion-card-header>
+      <ion-title>
+        <ion-list>
+          <ion-item lines="none">
+            <ion-avatar slot="start">
+              <img
+                alt="Silhouette of a person's head"
+                src="https://ionicframework.com/docs/img/demos/avatar.svg"
+              />
+            </ion-avatar>
+            <ion-label>{{user.name}}</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-icon slot="start" name="mail"></ion-icon>
+          <ion-label>{{user.email}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon slot="start" name="folder-open"></ion-icon>
+          <ion-label>{{user.role}}</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+    <ion-button  fill="clear" (click)="editUser(user)">Edit</ion-button>
+  </ion-card>
 </ion-content>
